<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F3F4"
    android:backgroundTint="#F5F5F5"
    tools:context=".OutputActivity">

    <LinearLayout
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        android:layout_width="320dp"
        android:layout_height="570dp"
        android:orientation="vertical"
        android:elevation="4dp"
        android:background="@color/white"
        android:layout_margin="25dp"
        android:id="@+id/topLinear"
        app:layout_editor_absoluteX="26dp"
        app:layout_editor_absoluteY="26dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/output_text"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                />
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="320dp"
        android:layout_height="47dp"
        android:layout_marginTop="570dp"
        android:background="@color/teal_005"
        android:elevation="4dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_editor_absoluteX="45dp">

        <Button
            android:id="@+id/download"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/borderlessButtonStyle"
            android:checkable="false"
            android:clickable="true"
            android:drawableTop="@drawable/download"
            android:elevation="4dp"
            android:focusable="true"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:padding="5dp"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/purple_main"
            android:textScaleX="0.7"
            app:iconPadding="0dp" />

        <Button
            android:id="@+id/copy"
            android:layout_width="0dp"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/borderlessButtonStyle"
            android:checkable="false"
            android:clickable="true"
            android:drawableTop="@drawable/copy"
            android:elevation="4dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/copy"
            android:textAllCaps="false"
            android:textColor="@color/purple_main"
            android:textScaleX="0.7"
            app:iconPadding="0dp"
            android:focusable="true" />

        <Button
            android:id="@+id/share"
            android:layout_width="0dp"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/borderlessButtonStyle"
            android:checkable="false"
            android:clickable="true"
            android:drawableTop="@drawable/share"
            android:elevation="4dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/share"
            android:textAllCaps="false"
            android:textColor="@color/purple_main"
            android:textScaleX="0.7"
            app:iconPadding="0dp"
            android:focusable="true" />

        <Button
            android:id="@+id/browse"
            android:layout_width="0dp"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/borderlessButtonStyle"
            android:checkable="false"
            android:clickable="true"
            android:drawableTop="@drawable/search"
            android:elevation="4dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/browse"
            android:textAllCaps="false"
            android:textColor="@color/purple_main"
            android:textScaleX="0.7"
            app:iconPadding="0dp"
            android:focusable="true" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>